--- a/project.json
+++ b/project.json
@@ -1,11 +1,11 @@
 {
   "name": "avisoContemplacaoTeams",
-  "projectId": "3ce2ded0-f483-498a-aa7f-92c46ead9679",
   "description": "Blank Process",
   "main": "Main.xaml",
   "dependencies": {
     "UiPath.Excel.Activities": "[2.21.0-preview]",
     "UiPath.Mail.Activities": "[1.20.2]",
+    "UiPath.PDF.Activities": "[3.4.1]",
     "UiPath.System.Activities": "[23.6.0-preview]",
     "UiPath.Testing.Activities": "[23.6.0-preview]",
     "UiPath.UIAutomation.Activities": "[23.6.1-preview]"
@@ -22,7 +22,6 @@
     "isAttended": false,
     "requiresUserInteraction": true,
     "supportsPersistence": false,
-    "workflowSerialization": "DataContract",
     "excludedLoggedData": [
       "Private:*",
       "*password*"
