--- a/project.json
+++ b/project.json
@@ -1,6 +1,5 @@
 {
   "name": "avisoContemplacaoTeams",
-  "projectId": "a9885d98-e400-4e57-8d99-19c4ead20d09",
   "description": "Blank Process",
   "main": "Main.xaml",
   "dependencies": {
@@ -9,13 +8,14 @@
     "UiPath.PDF.Activities": "[3.4.1]",
     "UiPath.System.Activities": "[23.6.0-preview]",
     "UiPath.Testing.Activities": "[23.6.0-preview]",
-    "UiPath.UIAutomation.Activities": "[23.6.1-preview]"
+    "UiPath.UIAutomation.Activities": "[23.6.1-preview]",
+    "UiPath.Word.Activities": "[1.13.0]"
   },
   "webServices": [],
   "entitiesStores": [],
   "schemaVersion": "4.0",
   "studioVersion": "23.6.1.0",
-  "projectVersion": "1.0.1",
+  "projectVersion": "1.0.2",
   "runtimeOptions": {
     "autoDispose": false,
     "netFrameworkLazyLoading": false,
@@ -23,7 +23,6 @@
     "isAttended": false,
     "requiresUserInteraction": true,
     "supportsPersistence": false,
-    "workflowSerialization": "DataContract",
     "excludedLoggedData": [
       "Private:*",
       "*password*"
@@ -45,8 +44,7 @@
       "ignoredFiles": []
     },
     "fileInfoCollection": [],
-    "modernBehavior": true,
-    "saveToCloud": false
+    "modernBehavior": true
   },
   "expressionLanguage": "VisualBasic",
   "entryPoints": [
